--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,13 +13,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.apps.mohb.shutternotes"
         minSdkVersion 24
-        targetSdkVersion 30
-        versionCode 50
-        versionName "0.2.15"
+        //noinspection OldTargetApi
+        targetSdkVersion 29
+        versionCode 51
+        versionName "0.2.16"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
     }
