--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 28 15:31:25 BRST 2019
+#Sun Oct 11 14:25:16 BRT 2020
 sdk.dir=/opt/android/sdk
